# raytracer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: GLUtils.cpp  GLUtils.h  Geometry.h  Shader.cpp  Shader.h  main.cpp
src/shaders/: quad.frag  quad.vert  raytracing.comp
